# ZenithEngine

./: .gitattributes  .gitignore  CMakeLists.txt  InstallAndBuild.cmd  LICENSE  Main.cpp  README.md  glad.c  tmp.txt  tmp_block.txt  tmp_default_frag.glsl  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Libraries/include/glad/: glad.h
ZenithEngine/: .gitignore  CMakeLists.txt  README.md  ZenithEngine.sln  ZenithEngine.vcxproj  ZenithEngine.vcxproj.filters
ZenithEngine/ZEngine/include/ZEngine/Game/: ZGame.h
ZenithEngine/ZEngine/include/ZEngine/Window/: ZWindow.h
ZenithEngine/ZEngine/source/ZEngine/Game/: ZGame.cpp
ZenithEngine/ZEngine/source/ZEngine/Window/: ZWindow.cpp
ZenithEngine/ZenithEngine/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Model.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  ZenithEngine.cpp  ZenithEngine.vcxproj  ZenithEngine.vcxproj.filters  default.frag  default.vert  shaderClass.cpp  shaderClass.h
ZenithEngine/ZenithEngine/x64/Debug/: Game.nativecodeanalysis.sarif  ZenithEngine.exe.recipe  ZenithEngine.vcxproj.FileListAbsolute.txt  vc143.idb
ZenithEngine/ZenithEngine/x64/Debug/ZenithEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ZenithEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ZenithEngine/ZenithEngine/x64/Release/: ZenithEngine.exe.recipe  ZenithEngine.iobj  ZenithEngine.ipdb
ZenithEngine/ZenithEngine/x64/Release/ZenithEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ZenithEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ZenithEngine/x64/Debug/: ZenithEngine.exe.recipe  ZenithEngine.ilk  vc143.idb
ZenithEngine/x64/Debug/ZenithEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ZenithEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/: default.frag  default.vert  default_cool.frag  default_gray.frag  default_toon.frag  default_warm.frag
assets/Models/SnowTerrain/: SnowTerrain.fbx
assets/Models/adamHead/Assets/: Textures - Raccourci.lnk
rapport_bloc2/: 01-environnement_developpement C2.1.1.md  01-environnement_developpement.md  02-deploiement_continu C2.4.1.md  02-deploiement_continu.md  03-integration_continue C2.2.3-C2.4.1.md  03-integration_continue.md  04-prototype C2.2.1.md  04-prototype.md  05-tests_unitaires C2.2.2.md  05-tests_unitaires.md  06-securite_accessibilite C2.2.3.md  06-securite_accessibilite.md  07-cahier_recette C2.3.1.md  07-cahier_recette.md  08-plan_correction C2.3.2.md  08-plan_correction.md  09-documentation_technique C2.4.1.md  09-documentation_technique.md
scripts/: install_and_build.ps1  reconfigure.ps1
src/ZenithEngine/: Camera.cpp  Camera.h  FBXModel.cpp  FBXModel.h  ImGuiLayer.cpp  ImGuiLayer.h  Mesh.cpp  Model.cpp  Model.h  SimpleUI.h  Texture.cpp  ZenithApp.cpp  ZenithApp.h  ZenithEngine.cpp  shaderClass.cpp
src/ZenithEngine/x64/Debug/: RCa36844  ZenithEngine.exe.recipe  vc143.idb
src/ZenithEngine/x64/Debug/ZenithEngine.tlog/: ZenithEngine.lastbuildstate  ZenithEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
tests/: README.md  fbx_model_test.cpp  main_test.cpp  model_test.cpp  run_tests.bat  run_tests.ps1  run_tests.sh  simple_test.cpp
